add media queris

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Re-Creating Amazon-CLone</title>
+    <title>Responsive-Amazon-Clone-Suraish</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -16,10 +16,22 @@
   <body>
     <!-- Hello everyone! I'm Suraish. And This is my first website clone. -->
     <header>
+      <div class="mob-nav">
+        <img alt="" />
+        <label class="mob-nav" for="click">
+          <i class="fa-solid fa-bars mob-icon"></i>
+        </label>
+      </div>
+
+      <input style="display: none" type="checkbox" name="" id="click" />
+
       <!-- Navbar starts -->
       <nav>
         <div class="Nav-logo border">
           <div class="logo"></div>
+          <label for="click">
+            <i class="fa-solid fa-xmark cross-icon"></i>
+          </label>
         </div>
 
         <div class="Nav-address border">
